Mon Mar 23 06:33:39 GMT 2015  Olly Betts <olly@survex.com>

	* backends/chert/chert_table.cc,backends/glass/glass_table.cc,
	  common/io_utils.cc,common/io_utils.h,tests/api_backend.cc:
	  Avoid using fds < 3 for writable database tables, as it risks
	  corruption is some code in the same process tries to write to stdout
	  or stderr without realising it is closed.  (Partly addresses #651)

Sat Mar 21 22:11:53 GMT 2015  Olly Betts <olly@survex.com>

	* backends/glass/glass_cursor.cc: Add comment warning that B can't be
	  used in GlassCursor's destructor.

Tue Mar 17 03:51:00 GMT 2015  Olly Betts <olly@survex.com>

	* matcher/exactphrasepostlist.cc: Fixed reversed conditonal for
	  picking the shorter position list for an exact phrase of two terms.
	  The difference this fix makes isn't dramatic, but can be measured
	  (at least with cachegrind).  Thanks to kbwt for spotting this.

Fri Mar 13 11:21:37 GMT 2015  Olly Betts <olly@survex.com>

	* backends/chert/chert_compact.cc: Make sure we open all the tables of
	  a database at the same revision when compacting.  (Fixes #649)

Thu Mar 12 04:09:07 GMT 2015  Olly Betts <olly@survex.com>

	* examples/xapian-metadata.cc: Add 'list' subcommand to list all the
	  metadata keys.

Mon Mar 09 03:08:14 GMT 2015  Olly Betts <olly@survex.com>

	* include/xapian/constants.h,include/xapian/queryparser.h: Doxygen
	  comment wording tweaks.

Mon Mar 09 03:07:36 GMT 2015  Olly Betts <olly@survex.com>

	* include/xapian/constants.h,include/xapian/queryparser.h,
	  include/xapian/weight.h: Doxygen comment formatting tweaks.

Sat Mar 07 11:27:23 GMT 2015  Olly Betts <olly@tartarus.org>

	* queryparser/queryparser.lemony,tests/queryparsertest.cc: Extend the
	  set of characters allowed in the start of a range to be anything
	  except for '(' and characters <= ' '.  This better matches what's
	  accepted for a range end (anything except for ')' and characters <=
	  ' ').  Reported by Jani Nikula.
