@@ -1,3 +1,7 @@
+Sun Mar 29 03:56:12 GMT 2015  Olly Betts <olly@survex.com>
+
+	* Makefile.am,docs/Makefile.am: Add missing quoting.
+
 Mon Mar 23 06:33:39 GMT 2015  Olly Betts <olly@survex.com>
 
 	* backends/chert/chert_table.cc,backends/glass/glass_table.cc,
